[gd_scene load_steps=5 format=3 uid="uid://dirxqf7rihifv"]

[ext_resource type="Script" uid="uid://dgwijkakdqngj" path="res://src/game/ui/text_panel/text_panel.gd" id="1_thwot"]
[ext_resource type="Texture2D" uid="uid://bwllesgdtdekr" path="res://assets/test/NinjaAdventure/NinjaAdventure/Actor/Boss/DemonCyclop/Faceset.png" id="2_stsvh"]
[ext_resource type="PackedScene" uid="uid://bncekxvgyvyrw" path="res://src/game/ui/etc/text_lavel/text_label.tscn" id="3_ywtay"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6a36c"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="Text_Panel" type="Panel"]
process_mode = 2
anchors_preset = -1
anchor_left = 0.1875
anchor_top = 0.731481
anchor_right = 0.8125
anchor_bottom = 1.0
offset_top = -27.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_6a36c")
script = ExtResource("1_thwot")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 4.99976
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterLeft" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_stsvh")
expand_mode = 2

[node name="TextLabel" parent="HBoxContainer" instance=ExtResource("3_ywtay")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
bbcode_enabled = true

[node name="CharacterRight" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_stsvh")
expand_mode = 2
